test/zinc_source/compile_errors/rust_interop/01_wrong_arity.zn
// expected-error: call to extern 'max' missing required argument 'b'
extern rust {
    use std::cmp::max;

    fn max(a: i64, b: i64) -> i64;
}

fn main() {
    print(max(1))
}
